<resources>
    <string name="app_name">ConvertToMp3</string>
    <string name="no_files_here">No files here</string>
    <string name="mp4_files">Mp4 Files</string>
    <string name="mp3_files">Mp3 Files</string>
    <string name="description">Media Controls</string>
    <string name="share">Share</string>
    <string name="rename">Rename</string>
    <string name="details">Detail</string>
    <string name="convert">Convert</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="_00_00">00 : 00</string>
    <string name="add_to_favourite">Add To Favourite</string>
    <string name="search_here">Search here…</string>
    <string name="all">All</string>
    <string name="favourite">Favourite</string>
    <string name="done">Done</string>
    <string name="random">Random Play</string>
    <string name="are_you_sure_want_to_delete_this_file">Are you sure want to delete this file?</string>
</resources>