<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/convert" android:icon="@drawable/baseline_sync_alt_24" android:title="@string/convert"/>
    <item android:id="@+id/share" android:icon="@drawable/baseline_ios_share_24" android:title="@string/share"/>
    <item android:id="@+id/addFavourite" android:icon="@drawable/baseline_favorite_24" android:title="@string/add_to_favourite"/>
    <item android:id="@+id/rename" android:icon="@drawable/baseline_drive_file_rename_outline_24" android:title="@string/rename"/>
    <item android:id="@+id/details" android:icon="@drawable/baseline_info_24" android:title="@string/details"/>
    <item android:id="@+id/delete" android:icon="@drawable/baseline_delete_24" android:title="@string/delete"/>
</menu>