<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        tools:context=".ui.activity.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_banner"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_name"
                    android:textSize="@dimen/_24sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_medium"
                    />
                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:id="@+id/settings"
                    android:src="@drawable/icons8_settings"
                    app:tint="@color/white" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_search"
                    android:padding="@dimen/_6sdp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:src="@drawable/icons8_search"
                        android:layout_marginEnd="@dimen/_6sdp"/>
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/color_38"
                        android:id="@+id/edt_search"
                        android:fontFamily="@font/roboto_regular"
                        android:textCursorDrawable="@color/app_color"
                        android:paddingHorizontal="@dimen/_5sdp"/>
                    <ImageView
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:id="@+id/clear_text"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:src="@drawable/icons8_cancel"
                        android:visibility="invisible"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <androidx.viewpager2.widget.ViewPager2
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/_4sdp"
            android:id="@+id/viewPager"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:padding="@dimen/_8sdp"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/mp4Files"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp"
                android:gravity="center">
                <ImageView
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:src="@drawable/icons8_video_file_24"
                    app:tint="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mp4_files"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_4sdp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/mp3Files"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp"
                android:gravity="center">
                <ImageView
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:src="@mipmap/icons8_playlist_32_mdpi"
                    app:tint="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mp3_files"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_4sdp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
